--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod tempora nesciunt, repellendus odit laboriosam ab. A dolorem provident unde deleniti.</p>
 </body>
 </html>
